# career_copolit_ai

./: AGENTS.md  README.md  ats_jobs_report.md  main.py  pyproject.toml  railpack.toml  railway.json  requirements.txt  vercel.json  webs.txt
api/: main.py
data/: jobs_chunks.json
frontend/: index.html  script.js  style.css
output/: career_action_plan.md  resume_optimization.md
src/career_copilot_ai/: crew.py  main.py  utils.py
src/career_copilot_ai/config/: agents.yaml  tasks.yaml
src/career_copilot_ai/tools/: custom_tool.py
