[project]
name = "career_copilot_ai"
version = "0.1.0"
description = "CareerCopilot AI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = []   # All dependencies are managed in requirements.txt

[project.scripts]
career_copilot_ai = "career_copilot_ai.main:run"
chat = "career_copilot_ai.main:chat"
run_crew = "career_copilot_ai.main:run"
train = "career_copilot_ai.main:train"
replay = "career_copilot_ai.main:replay"
test = "career_copilot_ai.main:test"
run_with_trigger = "career_copilot_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
